# dsrp-ESEM-ML1-project

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ml1-project-module/: __init__.py  dataset.py  features.py  plots.py
ml1-project-module/modeling/: predict.py  train.py
